# ckan-ingestor-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: ckan_dataset_fetcher.rs  ckan_reader.rs  ckan_resource.rs  csv_reader.rs  dataset_fetcher.rs  datastore_reader.rs  document_reader.rs  duckdb_ckan_data_ingestor.rs  duckdb_connection_factory.rs  lib.rs  s3_document_ingestor.rs  s3_pdf_ingestor.rs
src/config/: ducklake_settings.rs  mod.rs  rest_catalog_settings.rs  s3_settings.rs
tests/: common.rs  csv_reader.rs  datastore_reader.rs  s3_document_ingestor.rs  s3_pdf_ingestor.rs
tests/fixtures/: ckan.rs  dataset_with_new_row.json  dataset_with_pdf_resource.json  dataset_with_update.json  dataset_with_wrong_csv_enconding.json  initial_dataset.json  mod.rs  s3.rs
tests/fixtures/data/: a6b97d48-a9fb-4991-9893-d920ffb19b90.json  csv_with_bom.csv  csv_with_latin_encode.csv  e3bce367-2e62-41c2-840f-b1df6255e7e5.csv  e3bce367-2e62-41c2-840f-b1df6255e7e5.json  empty.json  f6aeb362-a569-4da2-9ec1-ad7d0c6ca3d6.json  non_latin1_and_non_utf8.csv
