[package]
name = "ckan_ingestor_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
parking_lot = "0.12"
duckdb = { version = "1.3", features = ["bundled","vtab-arrow"] }
arrow = "55.2"

[dev-dependencies]
httpmock = "0.7"
