[package]
name = "ckan_ingestor_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
parking_lot = "0.12"
duckdb = { version = "1.3", features = ["bundled","vtab-arrow"] }
arrow = "55.2"
uuid = { version = "1.17.0", features = ["v4"] }
aws-config = "1.1"
aws-sdk-s3 = "1.14"
futures = "0.3.31"
testcontainers = { version = "0.24.0", features = ["blocking"] }

[dev-dependencies]
httpmock = "0.7"
aws-sdk-s3 = "1.14"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
once_cell = "1.19"
rstest = "0.18"
regex = "1.10"
wiremock = "0.5"
testcontainers = "0.24.0"

